Fixed styling issue for Toggle Feed button on mobile

--- a/src/components/orderBook/order-book.scss
+++ b/src/components/orderBook/order-book.scss
@@ -315,6 +315,7 @@ section#order-book {
             cursor: pointer;
             @media only screen and (max-width: 900px) {
                 height: 70%;
+                font-size: 14px;
             }
             @media only screen and (max-height: 450px) {
                 font-size: 12px;
